[package]
name          = "queen"
version       = "0.7.0-alpha.4"
license       = "MIT"
authors       = ["danclive <dangcheng@hotmail.com>"]
description   = "message queue"
documentation = "https://docs.rs/queen"
homepage      = "https://github.com/danclive/queen"
repository    = "https://github.com/danclive/queen"
readme        = "README.md"
keywords      = ["message-queue", "rpc"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]
edition       = "2018"
autobins      = false

[dependencies]
nson = "0.6"
serde = "1.0"
serde_derive = "1.0"
libc = "0.2"
log = "0.4"
rand = {"version" = "0.7", features = ["small_rng"]}
slab = "0.4"
ring = "0.16"

[target.'cfg(target_os = "linux")'.dependencies]
queen-io = "0.4"

[dev-dependencies]
queen-log = "0.2"

[[test]]
name = "test"
path = "test/mod.rs"
