[package]
name          = "queen"
version       = "0.26.0"
license       = "MIT"
authors       = ["danclive <dangcheng@hotmail.com>"]
description   = "message queue"
documentation = "https://docs.rs/queen"
homepage      = "https://github.com/danclive/queen"
repository    = "https://github.com/danclive/queen"
readme        = "README.md"
keywords      = ["message-queue", "messaging"]
exclude       = [
  ".gitignore",
  ".travis.yml",
  "deploy.sh",
  "test/**/*",
]
edition       = "2018"
autobins      = false

[dependencies]
queen-io = "0.6"
nson = "0.12"
libc = "0.2"
log = "0.4"
rand = {version = "0.8", features = ["small_rng"]}
ring = "0.16"

[dev-dependencies]
queen-log = "0.3"

[[test]]
name = "test"
path = "test/mod.rs"
